"fixed" pin jumping

--- a/static/css/_landing.css
+++ b/static/css/_landing.css
@@ -57,6 +57,7 @@
     width: 1px !important;	
     height: 1px !important;
     z-index: 100;
+    margin: 10rem; /* necessary to keep the lipids in place after loading screen */
 }
 
 .anchor.lung1 {
@@ -65,6 +66,19 @@
     top: 5%;
     left: 49%;
     background-color: rgb(255, 0, 0); 
+}
+
+.guidepoint {
+    background-color: rgb(255, 0, 0);
+    width: 1px !important;	
+    height: 1px !important;
+    z-index: 100;
+    position: absolute;
+}
+
+.guide1 {
+    left: 49%;
+    top: 36%; 
 }
 
 /* ############################## Container ############################## */
@@ -116,7 +130,7 @@
     height: 4rem;
     z-index: 100;
     scale: 1;
-    opacity: 1;
+    opacity: 0;
 }
 
 .svg-container {
@@ -153,6 +167,14 @@
         height: 100%;
         object-fit: contain; /* Ensures the image scales correctly within the container */
     }
+
+.svg-container2 {
+    position: absolute;
+    height: 0.5rem;
+    transform-origin: 155px 50px; /* Moves the origin 50 units above the top-left corner */
+    z-index: 100;
+    opacity: 0;
+}
 
 .svg-2 {
     height: 1em;
@@ -206,10 +228,40 @@
 
         .bakterium-container {
             position: absolute;
-            width: 27%;
+            width: 28%;
             top: 39%;
             left: 32%;
         }
+
+            .bilipid_bacterium {
+                position: absolute;
+                width: 1.25rem; /* 20px converted to rem */
+                height: 2.5rem; /* 40px converted to rem */
+                z-index: 100;
+                scale: 0.25;
+                display: block;
+            }
+            
+            .bilipid_bacterium img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain; /* Ensures the image scales correctly within the container */
+            }
+            
+            .bilipid_bacterium2 {
+                position: absolute;
+                width: 1.25rem; /* 20px converted to rem */
+                height: 2.5rem; /* 40px converted to rem */
+                z-index: 100;
+                scale: 0.25;
+                /* display: none; */
+            }
+            
+            .bilipid_bacterium2 img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain; /* Ensures the image scales correctly within the container */
+            }
 
             .amp{
                 position: absolute;
